# mod3-weather-project

./: README.md
weather_project-main/: README.md
weather_project-main/Weather project/: pyproject.toml
weather_project-main/Weather project/scripts/: run_demo.py
weather_project-main/Weather project/src/: Module1.py
weather_project-main/Weather project/src/weatherstats/: __init__.py  io.py  stats.py
weather_project-main/Weather project/src/weatherstats_masonmiller.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
