[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherstats-masonmiller"
version = "0.1.0"
description = "Weather dataset loader and descriptive statistics using pandas."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas"]

authors = [
  { name="Mason Miller" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
